--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_aGVscGZ1bC1sZW11ci05OC5jbGVyay5hY2NvdW50cy5kZXYk
 DATABASE_URL=postgresql://neondb_owner:npg_y1VXKonqQ8Ox@ep-calm-forest-adxlqfeh-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 EXPO_PUBLIC_SERVER_URL=https://uber.com/
+EXPO_PUBLIC_GEOAPIFY_API_KEY=ad0523b4d4ec4628815c46962896cb27
